# psi-stratified

./: setup.cfg
docs/source/: conf.py  index.rst
src/psi_stratified/: direct.py  energy.py  equilibrium.py  example.py  finder.py  sbox_param.py  stokesdensity.py  strat_mode.py  test_suite.py  tools.py  tracker.py  vis.py
