[metadata]
name = psi_stratified
version = 0.0.1
author = Sijme-Jan Paardekooper
author_email = s.j.paardekooper@qmul.ac.uk
description = Tools for solving stratified PSI problems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SijmeJan/psi-stratified
project_urls =
    Bug Tracker = https://github.com/SijmeJan/psi-stratified/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = numpy>=1.22.3; scipy>=1.8.0; h5py>=3.6.0

[options.packages.find]
where = psi_stratified
